# trackedfitness-rust-nextjs

./: .gitignore
backend/: Cargo.toml
backend/src/: decorators.rs  error.rs  errors.rs  extractors.rs  logging.rs  main.rs  middleware.rs  pagination.rs
backend/src/auth/: handlers.rs  mod.rs  routers.rs  serializers.rs
backend/src/brand/: handlers.rs  mod.rs  models.rs  routers.rs  serializers.rs
backend/src/brand/queries/: brand_detail.sql  brand_form_select.sql  brand_list.sql
backend/src/diet/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/diet/queries/: diet_create.sql  diet_date_range.sql  diet_delete.sql  diet_detail.sql  diet_list_user_date.sql  diet_meal_list.sql  diet_update.sql
backend/src/diet_target/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/diet_target/queries/: diet_target_create.sql  diet_target_delete.sql  (+8 more)
backend/src/diet_total/: handlers.rs  mod.rs  router.rs  serializers.rs
backend/src/email/: handlers.rs  routers.rs
backend/src/follower/: model.rs
backend/src/food/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/meal/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/meal_food/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/meal_of_day/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/profile/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/progress/: handlers.rs  models.rs  routers.rs  serializers.rs
backend/src/users/: handlers.rs  jwt.rs  mod.rs  models.rs  routers.rs  serializers.rs
(+197 files in other folders)
