[package]
name = "trackedfitness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-macros = "0.3.8"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.1.0"
lettre = { version = "0.11.1", features = ["builder"] }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
slug = "0.1.4"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "rust_decimal"
] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
